fix scrollbars showing

--- a/styles.css
+++ b/styles.css
@@ -311,7 +311,6 @@ img {
 }
 .label-grid-container-wrapper {
   padding-top: 5rem;
-  width: 100vw;
   display: none;
 }
 .label-grid {
